# FlowProxy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: app.manifest  app.rc  resource.h
src/: main.cpp
src/core/: checker.cpp  checker.h  importer.cpp  importer.h  proxy.cpp  proxy.h  proxy_chain.cpp  proxy_chain.h  proxy_list.cpp  proxy_list.h  rules_engine.cpp  rules_engine.h
src/gui/: dialogs.cpp  dialogs.h  main_window.cpp  main_window.h  theme.cpp  theme.h
src/hook/: hook_dll.cpp  injector.cpp  injector.h  shared_config.h
src/net/: connection_monitor.cpp  connection_monitor.h  dns_resolver.cpp  dns_resolver.h  local_server.cpp  local_server.h  socket.cpp  socket.h  socks.cpp  socks.h  traffic_interceptor.cpp  traffic_interceptor.h
src/utils/: settings.cpp  settings.h  system_proxy.cpp  system_proxy.h
